accessible/xul/XULFormControlAccessible.h
@@ -120,6 +120,8 @@ class XULRadioGroupAccessible : public XULSelectControlAccessible {
   virtual bool IsWidget() const override;
   virtual bool IsActiveWidget() const override;
   virtual bool AreItemsOperable() const override;
+  virtual Accessible* CurrentItem() const override;
+  virtual void SetCurrentItem(const Accessible* aItem) override;
 };
 
 /**
